# automatic-carnival

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .triage-policies.yml  BUILD.md  BUILDING.md  CMakeLists.txt  CMakePresets.json  Dockerfile  HACKING.md  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  PyTango.py  README.md  README.rst  README_8md.html  about.html  about_8dox.html  annotated.html  appveyor.yml  classexported__class.html  codecov.yml  dir_49e56c817e5e54854c35e136979f97ca.html  dir_5842af7666a7f4907ef2ce0377c33d84.html  dir_ef3b2545113449f8f25e623a543d64e3.html  disabled_appveyor.yml  files.html  index.html  modules.html  namespaces.html  pages.html  pyproject.toml  pytango_8hpp.html  searchdata-v1.js  setup.cfg  setup.py  winsetup.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  environment-py3.6-tango9.3.4.yml
.github/workflows/: build_wheels.yml  ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
doc/: conf.py  contents.rst  data_types.rst  environment.yml  faq.rst  how-to-contribute.rst  howto.rst  itango.rst  mock_tango_extension.py  news.rst  quicktour.rst  revision.rst  start.rst  windows_notes.txt
doc/.devcontainer/: Dockerfile  README.md
doc/_static/: boost_python_install.py  power_supply.py
doc/_templates/: index.html  indexsidebar.html
doc/client_api/: device_proxy.rst  green.rst
doc/green_modes/: green_modes_server.rst
doc/migration/: 9.3-to-9.4.rst  index.rst
doc/migration/to-9.4/: attr-decorators.rst  deps-install.rst  empty-attrs.rst  extract-as.rst  hl-dev-enum.rst  hl-dynamic.rst  index.rst  logging-percent-sym.rst  non-bound-user-funcs.rst  optional-proxy-attrs.rst
doc/server_api/: server.rst
doc/tep/: database.py
doc/testing/: mocks.rst  testing_approaches.rst
examples/Clock/: Clock.py  ClockDS.py  client.py
examples/TuringMachine/: TuringMachine.py  turing_client.py
examples/asyncio_green_mode/: __init__.py  asyncio_device_example.py  asyncio_simple_example.py  tcp_server_example.py
examples/dynamic/: dynamic_client.py  dynamic_server.py
examples/dynamic/common/: roi.py
examples/fwdAttr/: FwdServer.py
examples/interfacechangeEvents/: ClassFactory.cpp  IfchangeClient.py  IfchangeServer.h  IfchangeServer.py  IfchangeServerClass.h  main.cpp
examples/mandatory/: MandatoryPropertyServer.py
examples/many/: many_client.py  many_server.py
examples/multi/: multi_client.py  multi_server.py
examples/multidevicetestcontext/: conftest.py  test_integration.py
examples/pipeEvents/: PipeEventClient.py  PipeServer.h  PipeServer.py  PipeServerClass.h  main.cpp
examples/pipes/: ClassFactory.cpp  PipeClient.py  PipeServer.h  PipeServer.py  PipeServerClass.h
examples/simple/: simple_client.py  simple_server.py
examples/training/: README.md  docker-compose.yml
examples/training/client/: command01.py  command02.py  reading01.py  reading02.py  reading03.py  writing01.py  writing02.py
examples/training/server/: high-level-api.py  libps.py  low-level-api.py  ps-simulator.py  ps0a.py  ps0b-push-event.py  ps0b.py  ps0c.py  ps1-gevent.py  ps1-use-lib-logging.py  ps1-use-lib.py  ps1.py  ps2-gevent-check.py  ps2-gevent.py  test_ps0a.py  test_ps0b.py
examples/training/webinars/: crash_example.py  test_webinar.py
ext/: api_util.cpp  archive_event_info.cpp  attr_conf_event_data.cpp  attribute_alarm_info.cpp  attribute_dimension.cpp  attribute_event_info.cpp  attribute_info.cpp  attribute_info_ex.cpp  attribute_proxy.cpp  base_types.cpp  base_types_numpy.hpp  callback.cpp  change_event_info.cpp  command_info.cpp  constants.cpp  data_ready_event_data.cpp  database.cpp  defs.h  dev_command_info.cpp  dev_error.cpp  device_attribute.cpp  device_attribute.h  device_attribute_history.cpp  device_attribute_numpy.hpp  device_data.cpp  device_data_history.cpp  device_info.cpp  device_pipe.cpp  device_pipe.h  device_proxy.cpp  devintr_change_event_data.cpp  enums.cpp  event_data.cpp  exception.h  fast_from_py.h  from_py.h  group.cpp  locker_info.cpp  locking_thread.cpp  periodic_event_info.cpp  (+13 more)
ext/server/: attr.cpp  attr.h  attribute.cpp  attribute.h  command.cpp  command.h  device_class.cpp  device_class.h  device_impl.cpp  device_impl.h  dserver.cpp  encoded_attribute.cpp  fwdAttr.cpp  log4tango.cpp  multi_attribute.cpp  multi_class_attribute.cpp  pipe.cpp  pipe.h  subdev.cpp  user_default_attr_prop.cpp  user_default_pipe_prop.cpp  wattribute.cpp
include/pytango/: pytango.hpp
source/: bpwrap.cpp  pytango.cpp
tango/: __init__.py  api_util.py  asyncio.py  asyncio_executor.py  asyncio_tools.py  attr_data.py  attribute_proxy.py  base_types.py  client.py  codec.py  connection.py  db.py  device_attribute.py  device_class.py  device_data.py  device_proxy.py  device_server.py  encoded_attribute.py  exception.py  futures.py  futures_executor.py  gevent.py  gevent_executor.py  globals.py  green.py  group.py  group_reply.py  group_reply_list.py  log4tango.py  pipe.py  pipe_data.py  pytango_init.py  pytango_pprint.py  pyutil.py  release.py  server.py  tango_numpy.py  tango_object.py  test_context.py  test_utils.py  (+2 more)
tango/databaseds/: DataBaseds  database.py
tango/databaseds/db_access/: sqlite3.py
test/: CMakeLists.txt
test/source/: pytango_test.cpp
tests/: conftest.py  test_async.py  test_client.py  test_event.py  test_server.py  test_test_context.py
