[build-system]
requires = ["scikit-build-core", "numpy"]
build-backend = "scikit_build_core.build"

[project.urls]
homepage = "https://www.tango-controls.org/"
documentation = "https://pytango.readthedocs.io"
repository = "https://gitlab.com/tango-controls/pytango.git"
changelog = "https://gitlab.com/tango-controls/pytango/-/releases"

[project]
name = "pytango"
version = "9.4.0"
description = "This is a description"
authors = [
    {'name' = "Coutinho"}]
maintainers = [
    {"name" = "Anton Joubert"},
    {"name" = "Yury Matveyev"},
    {"name" = "Ulrik Pedersen"}]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: Other Environment",
        "Intended Audience :: Developers",
        "License :: OSI Approved ::",
        " GNU Library or Lesser General Public License (LGPL)",
        "Natural Language :: English",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX",
        "Operating System :: POSIX :: Linux",
        "Operating System :: Unix",
        "Programming Language :: C",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Topic :: Scientific/Engineering",
        "Topic :: Software Development :: Libraries",
    ]

[tool.setuptools.package-data]
pytango.data = ["LICENSE.txt"]

[tool.scikit-build]
# This activates verbose builds
cmake.verbose = true

[tool.scikit-build.cmake.define]
# Put CMake defines in this table.
# TANGO_ROOT="/Users/ulrik/soft/installed/tango.9.4"
