[build-system]
requires = ["scikit-build-core", "numpy"]
build-backend = "scikit_build_core.build"

[project.urls]
homepage = "https://www.tango-controls.org/"
documentation = "https://pytango.readthedocs.io"
repository = "https://gitlab.com/tango-controls/pytango.git"
changelog = "https://gitlab.com/tango-controls/pytango/-/releases"

[project]
name = "pytango"
version = "9.4.2"
description = "Python bindings for the cppTango library; part of the Tango Distributed Control System toolkit"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
authors = [
    {'name' = "Coutinho"}]
maintainers = [
    {"name" = "Anton Joubert"},
    {"name" = "Yury Matveyev"},
    {"name" = "Ulrik Pedersen"}]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: Other Environment",
        "Intended Audience :: Developers",
        "License :: OSI Approved ::",
        " GNU Library or Lesser General Public License (LGPL)",
        "Natural Language :: English",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX",
        "Operating System :: POSIX :: Linux",
        "Operating System :: Unix",
        "Programming Language :: C",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Topic :: Scientific/Engineering",
        "Topic :: Software Development :: Libraries",
    ]

dependencies = ["numpy"]
[project.optional-dependencies]
test = [
    "gevent >= 20.0",
    "psutil",
    "pytest",
    "pytest-forked"
]

[tool.scikit-build]
cmake.verbose = false  # verbose builds?
wheel.packages = ["tango", "tango.databaseds", "tango.databaseds.db_access"]

[tool.scikit-build.cmake.define]
# Put CMake defines in this table.
# Can also be set as cmake cache variables through the CMAKE_ARGS environment variable:
# e.g.: CMAKE_ARGS="-DTANGO_ROOT=/path/to/installed/cpptango" python3 -m build
# TANGO_ROOT="/path/to/installed/tango.9.4"


[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    ".eggs",
    "*.egg",
    "build",
    "databaseds",
    "examples",
    "doc",
]
ignore = [
    "E402",  # Module level import not at top of file
    "E501",  # Line too long (> 79 characters)
    "E731",  # Do not assign a lambda expression, use a def
]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
]
